# greenfloor

./: .gitignore  .gitmodules  .llvm-cov.toml  .pre-commit-config.yaml  .prettierignore  .tmp-fix-xch-pricing.bundle  .yamllint  AGENTS.md  CLOUD_WALLET_DOCS_AND_API.md  COINSET_DOCS_AND_API.md  DEXIE_DOCS_AND_API.md  GREENFLOOR_FULL_AUDIT_2026-03-30.md  README.md  SPLASH_OFFER_SUBMISSION_GUIDE.md  greenfloor_signer.py  pyproject.toml  pyrightconfig.json
greenfloor-engine/: Cargo.toml
greenfloor-engine-pyo3/: Cargo.toml  pyproject.toml
greenfloor-engine-pyo3/src/: coin_ops_py.rs  daemon_inprocess_bridge.rs  daemon_py.rs  engine_contracts_py.rs  execution_py.rs  hex_py.rs  lib.rs  manager_py.rs  notifications_py.rs  offer_action_py.rs  offer_bootstrap_py.rs  offer_build_py.rs  offer_request_py.rs  retry_py.rs  strategy_py.rs  wallet_io_py.rs  watchlist_py.rs
greenfloor-engine-pyo3/src/cycle/: cancel_py.rs  inventory_py.rs  managed_py.rs  market_py.rs  mod.rs  offer_py.rs  orchestration_py.rs  reconcile_py.rs  stale_sweep_py.rs  strategy_counts_py.rs
greenfloor-engine-pyo3/src/py_utils/: bootstrap.rs  bootstrap_marshal.rs  coin_ops.rs  common.rs  cycle.rs  offer_request.rs  policy.rs
greenfloor-engine/src/: async_boundary.rs  binaries.rs  cli_util.rs  coinset_cli.rs  coinset_probe.rs  file_logging.rs  hex.rs  hex_cli.rs  kms.rs  kms_cli.rs  lib.rs  main.rs  minimal_program_template.rs  num_conv.rs  paths.rs
greenfloor-engine/src/adapters/: dexie.rs  http_json.rs  mod.rs  splash.rs
greenfloor-engine/src/async_boundary/: daemon.rs  manager.rs  mod.rs  offer.rs
greenfloor-engine/src/bech32m/: mod.rs
greenfloor-engine/src/bls/: keyring.rs  signing.rs
greenfloor-engine/src/coin_ops/: amounts.rs  effective_counts.rs  fee_budget.rs  gate.rs  inventory.rs  mod.rs  plan.rs  policy.rs  scalars.rs  selection.rs  shape_defer.rs  shape_protection.rs  split_planning.rs  wallet_coin.rs
greenfloor-engine/src/coinset/: adapter.rs  adapter_cli.rs  api.rs  asset.rs  backend.rs  batch.rs  broadcast.rs  client_retry.rs  coin_records.rs  coin_select.rs  direct_api.rs  dust_hydration_test.rs  json_util.rs  mod.rs  msp.rs  offer_assets.rs  pagination.rs  parse.rs  poll.rs  presplit.rs  retry.rs  rpc_result.rs  scan_client.rs  signer_client.rs  spent_verify.rs  test_support.rs  vault_fetch.rs  wallet_io.rs  ws_event.rs  xch.rs
greenfloor-engine/src/coinset_cli/: tests.rs
greenfloor-engine/src/coinset_probe/: cli.rs  command.rs  mod.rs  report.rs  types.rs
greenfloor-engine/src/config/: cat_ticker_index.rs  cats_catalog.rs  keys_registry.rs  markets.rs  markets_validate.rs  mod.rs  parse_int.rs  program.rs  program_parse.rs  program_validate.rs  runtime_load.rs  signer.rs  venue.rs  yaml_fields.rs  yaml_file.rs
greenfloor-engine/src/cycle/: cancel.rs  dispatch.rs  execution.rs  lifecycle.rs  managed.rs  market.rs  mod.rs  notifications.rs  orchestration.rs  periodic.rs  reconcile.rs  reseed.rs  retry.rs  strategy.rs  strategy_action.rs
greenfloor-engine/src/daemon/: audit_retention.rs  cancel_phase.rs  cli.rs  coin_ops_execution.rs  coin_ops_phase.rs  coinset_spendable.rs  coinset_spendable_tests.rs  coinset_tx.rs  coinset_ws.rs  config_paths.rs  cycle_entry.rs  cycle_paths.rs  cycle_store.rs  daemon_loop.rs  dexie_offer.rs  dexie_size.rs  disabled_markets.rs  dispatch_test_controls.rs  inventory_freshness.rs  inventory_phase.rs  lock.rs  logging.rs  loop_harness.rs  market_context.rs  market_cycle.rs  market_dispatch.rs  market_gate.rs  market_phases.rs  markets.rs  mod.rs  offer_lifecycle_cli.rs  preamble.rs  program_runtime.rs  python_bridge.rs  reconcile_augment.rs  reconcile_batch.rs  reconcile_market_cycle.rs  reconcile_offer.rs  reconcile_persist.rs  reconcile_phase.rs  (+11 more)
greenfloor-engine/src/error/: mod.rs
greenfloor-engine/src/hex/: bytes.rs  clvm.rs  mod.rs
greenfloor-engine/src/kms/: runtime.rs  test_hooks.rs
greenfloor-engine/src/manager/: bootstrap.rs  build_and_post.rs  logging.rs  mod.rs  offer_lifecycle.rs  offers_cli.rs  tests.rs
greenfloor-engine/src/manager_cli/: cats.rs  cats_catalog.rs  coin_op_loop.rs  commands.rs  context.rs  dispatch.rs  flag_groups.rs  json.rs  keys.rs  keys_test.rs  ladder.rs  mod.rs  offers.rs  offers_test.rs  paths.rs  runtime.rs  setup.rs  test_support.rs  tests.rs  util.rs  vault_asset_trace.rs  vault_scan.rs  vault_scan_sim.rs  vault_trace_asset_kind.rs
greenfloor-engine/src/metrics/: mod.rs
greenfloor-engine/src/offer/: action.rs  assemble.rs  assets.rs  build.rs  build_context.rs  cancel_input.rs  codec.rs  codec_tests.rs  dexie_payload.rs  invariants.rs  mod.rs  plan.rs  presplit.rs  pricing.rs  publish.rs  reclaim.rs  request.rs  types.rs
greenfloor-engine/tests/: audit_retention.rs  cat_parse_replay.rs  coinset_byc_inventory_scan.rs  coinset_cli_subprocess.rs  coinset_probe_integration.rs  coinset_probe_subprocess.rs  config.rs  config_markets.rs  config_program.rs  config_script_fields.rs  config_validation.rs  daemon_once_integration.rs  hex_cli_subprocess.rs  manager_bootstrap.rs  manager_build_offer.rs  manager_cats.rs  manager_cli_subprocess.rs  manager_coin_ops.rs  manager_coins_list.rs  manager_doctor.rs  manager_integration.rs  manager_keys.rs  manager_offers.rs  script_adapter_subprocess.rs  sqlite_migrations.rs  sqlite_store.rs  vault_coinset_scan_integration.rs  vault_coinset_scan_subprocess.rs
greenfloor-native/: Cargo.toml  pyproject.toml
greenfloor-native/src/: lib.rs
greenfloor-signer/: Cargo.toml
greenfloor-signer-pyo3/: Cargo.toml  pyproject.toml
greenfloor-signer-pyo3/src/: coin_ops_py.rs  cycle.rs  execution_py.rs  hex_py.rs  lib.rs  notifications_py.rs  offer_action_py.rs  offer_bootstrap_py.rs  offer_build_py.rs  offer_request_py.rs  py_utils.rs  retry_py.rs  strategy_py.rs
greenfloor-signer/src/: cloud_wallet.rs  coinset.rs  config.rs  error.rs  hex.rs  kms.rs  lib.rs  main.rs  notifications.rs
old/: README.md  common.py  make_offer.py  make_offer_for_b_usdc.py  make_offer_for_xch.py  pyproject.toml  requirements.txt  run_splash_mm.sh  setup.cfg  splash_carbon_market_maker_xch.py
(+1101 files in other folders)
