[project]
name = "greenfloor"
version = "0.1.0"
description = "GreenFloor CAT market making daemon and manager CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9.0",
  "pyright>=1.1.390",
]

[project.scripts]
greenfloor-manager = "greenfloor.cli.manager:main"
greenfloord = "greenfloor.daemon.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["greenfloor*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["old", "chia-wallet-sdk"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"
