[project]
name = "greenfloor"
version = "0.1.0"
description = "GreenFloor script adapter dependencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.5.1",
  "ruff==0.9.10",
  "pyright==1.1.408",
  "yamllint==1.35.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["greenfloor_scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["chia-wallet-sdk"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]
