[package]
name = "greenfloor-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "greenfloor_native"
crate-type = ["cdylib"]

[dependencies]
chia-protocol = "0.36.1"
chia-puzzle-types = "0.36.1"
chia-sdk-driver = { version = "0.33.0", features = ["offer-compression"] }
chia-traits = "0.36.1"
clvmr = "=0.16.2"
pyo3 = { version = "0.23.5", features = ["extension-module"] }
