[package]
name = "greenfloor-signer-pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "greenfloor_signer"
crate-type = ["cdylib"]

[dependencies]
chia-bls = "0.36.1"
greenfloor-signer = { path = "../greenfloor-signer" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
