[package]
name = "greenfloor-signer"
version = "0.1.0"
edition = "2021"
description = "Local Chia vault signing CLI backed by chia-wallet-sdk"
license = "Apache-2.0"

[lib]
name = "greenfloor_signer"
path = "src/lib.rs"

[[bin]]
name = "greenfloor-signer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "1"
aws-sdk-kms = "1"
base64 = "0.22"
chia-bls = "0.36.1"
chia-consensus = "0.36.1"
chia-protocol = "0.36.1"
chia-puzzle-types = "0.36.1"
chia-puzzles = "0.20.3"
chia-sdk-coinset = { path = "../chia-wallet-sdk/crates/chia-sdk-coinset" }
chia-sdk-driver = { path = "../chia-wallet-sdk/crates/chia-sdk-driver", features = ["offer-compression"] }
chia-sdk-signer = { path = "../chia-wallet-sdk/crates/chia-sdk-signer" }
chia-sdk-types = { path = "../chia-wallet-sdk/crates/chia-sdk-types" }
chia-sdk-utils = { path = "../chia-wallet-sdk/crates/chia-sdk-utils" }
chia-secp = "0.36.1"
chia-traits = "0.36.1"
clap = { version = "4", features = ["derive"] }
clvm-traits = "0.36.1"
clvm-utils = "0.36.1"
clvmr = "0.16.2"
hex = "0.4"
indexmap = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0"
chia-sdk-test = { path = "../chia-wallet-sdk/crates/chia-sdk-test" }
hex-literal = "0.4"
indexmap = "2"
mockito = "1.6"
sha2 = "0.10"
tempfile = "3"
